2008-10-01  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/detail.html: forgot this part of the page..
	* media/js/tiny_mce/textarea.js: fixed bug about tinymce converting urls to
	relative..
	* blog/feeds.py, blog/urls.py, blog/views.py, extra/tag_cloud.py,
	tags/admin.py, tags/models.py, templates/blog/homepage.html,
	templates/blog/tags.html: tags are slugified (urlized) now.. this will solve
	the rss related problems for tags and more.. there are also some changes in
	the db scheme for tags table..

2008-09-30  Alper KANAT  <alperkanat@gmail.com>

	* polls/templatetags/poll_filters.py: fixed a bug..
	* blog/feeds.py: fixed a bug.. actually this is a stupid implementation..
	* blog/templatetags/blog_filters.py: fixed a typo..
	* tagged: Version 1.0

2008-09-29  Alper KANAT  <alperkanat@gmail.com>

	* migrated to bazaar instead of subversion.. therefore updated some
	corrupted symlinks and some permissions..
	* .htaccess: deleted this file since i'm moving to nginx..

2008-09-24  Alper KANAT  <alperkanat@gmail.com>

	* extra/captcha.py, users/views.py: controlling captcha for non ASCII
	characters.. must use forms api in the future..
	* comments/views.py: anonymous users don't have to enter a web site..
	* templates/feeds/latest_description.html: left the truncate job to
	feedburner.. this way raptiye don't care about how long the blog post is and
	pushes the whole entry to the rss..
	* extra/webcal.py, blog/templatetags/blog_filters.py: can exclude anything
	from the object being rendered into the web calendar..
	* extra/messages.py: added new messages..
	* extra/captcha.py: there's a bug in the registration form that comes up
	when unicode characters are entered into the captcha.. this might fix it..
	* comments/views.py, comments/forms.py, templates/blog/comments.html:
	anonymous comments can be entered now.. this needs more testing btw.. using
	forms api to validate the comments form (but only when anonymous comments