@@ -9,7 +9,14 @@
 		<link rel="stylesheet" href="/media/css/style.css">
 		<link href="{{ mainpage.rss_url }}" rel="alternate" type="application/rss+xml" title="raptiye rss feed" />
 		<script type="text/javascript" src="/media/js/jquery.js"></script>
+		<script type="text/javascript" src="/media/js/ibox/ibox.js"></script>
+		<script type="text/javascript">
+			iBox.setPath('/media/js/ibox/');
+			iBox.close_label = "X"
+		</script>
+		<link rel="stylesheet" href="/media/js/ibox/skins/darkbox/darkbox.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="/media/js/raptiye.js"></script>
+		<script type="text/javascript" src="/media/js/ff.js"></script>
 		{# Google Analytics JS Code Start #}
 		<script type="text/javascript">
 			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
