@@ -5,14 +5,6 @@
 {% block body %}
 	{% include "blog/sidebar.html" %}
 	
-	{# including iBox to show dialog boxes #}
-	<script type="text/javascript" src="/media/js/ibox/ibox.js"></script>
-	<script type="text/javascript">
-		iBox.setPath('/media/js/ibox/');
-		iBox.close_label = "X"
-	</script>
-	<link rel="stylesheet" href="/media/js/ibox/skins/darkbox/darkbox.css" type="text/css" media="screen" />
-	
 	{# a hidden layer to include gravatar form #}
 	<div id="gravatar_form">
 		aşağıdaki forma e-posta adresinizi yazarak gravatar hesabınızdaki öntanımlı avatar'ınızı raptiye hesabınız 
